# ai-compliance-qa-lab

./: .deepeval_telemetry.txt  .env.example  .gitignore  AGENTS.md  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.cursor/rules/: eval-suite.mdc  project-conventions.mdc
.github/workflows/: eval-gate.yml
.streamlit/: config.toml
app/: embeddings.py  env_check.py  guards.py  main.py  observability.py  providers.py  rag.py  streamlit_ui.py
app/agent/: __init__.py  runner.py  tools.py
app/retrieval/: __init__.py  bm25_index.py  config.py  fusion.py  pipeline.py  query_expansion.py  reranker.py  types.py
docs/: AGENT_QA.md  ALLIANZ_SUPPLEMENT.md  ARCHITECTURE.md  DAY_02_RAGAS.md  EVAL_STRATEGY.md  ONBOARDING_7_DAYS.md  STUDY_GUIDE.md  STUDY_PLAN.md
eval/: __init__.py  conftest.py  deepeval_helpers.py  gate.py  helpers.py  metrics_registry.py  ragas_config.py  reporting.py  test_adversarial.py  test_bias.py  test_budget.py  test_deepeval.py  test_metamorphic.py  test_promptfoo.py  test_ragas.py  thresholds.yaml
eval/agent/: golden_trajectories.jsonl  test_adversarial.py  test_deepeval_agent.py  test_tool_selection.py  test_trajectory_judge.py  trajectory_utils.py
promptfoo/: prompt-v1.txt  prompt-v2.txt  promptfooconfig.yaml  tests.generated.yaml
scripts/: garak_scan.sh  generate_promptfoo_tests.py  ingest_corpus.py
tests/: __init__.py  test_env_check.py  test_gate.py  test_ingest_guards.py  test_input_guards.py  test_rag_prompts.py  test_rag_security.py  test_retrieval.py  test_supply_chain.py  test_tools.py
(+10 files in other folders)
